src/assets/css/nos-contacts.css
.contacts-hero {
  background-color: #eaeaea;
  padding-top: 2rem;
}
.hero__title {
  font-size: 50px;
  color: #1e0c65;
}

a {
  color: #1e0ca5;
  font-size: 17px;
}

.map-block {
  overflow: hidden;
  border-radius: 5px;
  border: 1px solid #1e0c65;
}

@media only screen and (max-width: 450px) {
  .jumbotron {
    height: auto !important;
    padding-bottom: 2rem;
  }
  .hero__title {
    font-size: 35px !important;
    margin-bottom: .5rem;
  }
}

